# App.Core/Handlers/GetQuestionAnswerHandler.cs
@@ -1,5 +1,6 @@
 using App.Core.Entities;
 using App.Core.Enums;
+using App.Core.Factories;
 using App.Core.Interfaces;
 using App.Core.Requests;
 using App.Core.Utilities;
@@ -19,17 +20,20 @@ namespace App.Core.Handlers
     public class GetQuestionAnswerResponse : Response
     {
         [DataMember] public QuestionAnswer QuestionAnswer;
+        [DataMember] public Question Question;
     }
 
     public class GetQuestionAnswerHandler : BaseHandler<GetQuestionAnswerRequest, GetQuestionAnswerResponse>
     {
         readonly IRepository<DbEntities.QuestionAnswer> _repository;
         private readonly IMapper _mapper;
+        private readonly IQuestionsFactory _questionsFactory;
 
-        public GetQuestionAnswerHandler(IRepository<DbEntities.QuestionAnswer> repository, IMapper mapper)
+        public GetQuestionAnswerHandler(IRepository<DbEntities.QuestionAnswer> repository, IMapper mapper, IQuestionsFactory questionsFactory)
         {
             _repository = repository;
             _mapper = mapper;
+            _questionsFactory = questionsFactory;
         }
 
         protected override GetQuestionAnswerResponse Handle(GetQuestionAnswerRequest request)
@@ -50,6 +54,14 @@ namespace App.Core.Handlers
             var entity = _mapper.Map<QuestionAnswer>(dbRecord);
 
             response.QuestionAnswer = entity;
+
+            var getQuestionRequest = new GetQuestionRequest()
+            {
+                Id = dbRecord.QuestionId,
+                UserId = request.UserId
+            };
+
+            response.Question = _questionsFactory.GetQuestion(getQuestionRequest).Question;
             return response;
         }
     }
