# SuperAnswersAngular/src/data-services/models/edit-question-answer-request.ts
@@ -1,8 +1,6 @@
 /* tslint:disable */
 export interface EditQuestionAnswerRequest {
   id?: string;
-  questionId?: string;
   answer?: string;
-  votes: number;
   userId?: string;
 }
